Minor modifications to revision C.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@ The following revisions of the MBino exist:
     Revision B</A>
 								<Br>
     <Img Src="rev_b/mbino_rev_b_small.jpg">
+								</LI><LI>
+	<A HRef="rev_c/index.html">
+    Revision C</A>
+								<Br>
+    <Img Src="rev_b/mbino_rev_c_small.jpg">
 								</LI></UL>
 								</P>
 								<H2>
