Added MakerBus reset circuit.

--- a/index.html
+++ b/index.html
@@ -16,18 +16,12 @@ The following revisions of the MBino exist:
 								<UL><LI>
 	<A HRef="rev_a/index.html">
     Revision A</A>
-								<Br>
-    <Img Src="rev_a/mbino_rev_a_small.jpg">
 								</LI><LI>
 	<A HRef="rev_b/index.html">
     Revision B</A>
-								<Br>
-    <Img Src="rev_b/mbino_rev_b_small.jpg">
 								</LI><LI>
 	<A HRef="rev_c/index.html">
     Revision C</A>
-								<Br>
-    <Img Src="rev_b/mbino_rev_c_small.jpg">
 								</LI></UL>
 								</P>
 								<H2>
@@ -57,7 +51,7 @@ The MBino has the following features:
     one of which is used by the Arduino IDE and
     the other which is dedicated to the MakerBus.
 								</LI><LI>
-    The MBino is has a bootloader that is compatible
+    The MBino has a bootloader that is compatible
     with the Arduino IDE.
 								</LI><LI>
     All shield boards that that are designed to work
